@@ -1,3 +1,7 @@
+2001-10-09  Will Woods <will.woods@compaq.com>
+	* aboot.c, disk.c, include/config.c: replaced ABOOT_MINOR and 
+	ABOOT_MAJOR with ABOOT_VERSION. Bumped version number to 0.8pre2.
+
 2001-10-08  Will Woods <will.woods@compaq.com>
 	* fs/ext2.c: Fixed elusive overflow bug. If part of the kernel was 
 	past the 524,287th block (given 4096 bytes per block) the byte offset
